--- a/src/components/ProfileButton.module.css
+++ b/src/components/ProfileButton.module.css
@@ -7,6 +7,9 @@
     transition:all 0.1s ease-in-out;
     padding:0 1rem;
     cursor:pointer;
+    display:flex;
+    align-items:center;
+    box-sizing: content-box;
    
 }
 .totalContainer:hover{
@@ -19,12 +22,9 @@
     height:3.4rem;
     margin:auto 0;
     border-radius:50%;
-    /* filter:drop-shadow(0px 0px 5px rgba(0,0,0,.5)); */
     border:0.2px solid rgb(167, 167, 167);
 }
 .fullName{
-    display:inline-block;
-    margin:2rem 0;
     font-weight: 500;
     font-size: 1.2rem;
     letter-spacing:-0.1rem;
