--- a/src/components/Tab.module.css
+++ b/src/components/Tab.module.css
@@ -4,6 +4,7 @@
     color:rgb(53, 53, 53)
 }
 .link{
+    
     color:rgb(90, 90, 90);
     font-weight: 500;
     font-size:1.2rem;
@@ -12,8 +13,8 @@
     transition:all 0.1s ease-in-out;
     padding:0 1rem;
     cursor:pointer;
+    display:flex;
+    align-items:center;
+    box-sizing: content-box;
 }
-.text{
-    display:inline-block;
-    margin:2rem 0;
-}
+
