--- a/src/components/Tab.module.css
+++ b/src/components/Tab.module.css
@@ -4,7 +4,7 @@
     color:rgb(53, 53, 53)
 }
 .link{
-    
+    height:100%;
     color:rgb(90, 90, 90);
     font-weight: 500;
     font-size:1.2rem;
@@ -15,6 +15,6 @@
     cursor:pointer;
     display:flex;
     align-items:center;
-    box-sizing: content-box;
+    /* box-sizing: content-box; */
 }
 
