--- a/client/src/components/CenterPopup.module.css
+++ b/client/src/components/CenterPopup.module.css
@@ -8,5 +8,5 @@
     background-color:#ffffff;
     text-align: center;
     box-shadow:0 0 1rem 1rem #dbe4f4;
-    width:fit-content
+    width:max-content;
 }
