--- a/client/src/components/TypeInput.module.css
+++ b/client/src/components/TypeInput.module.css
@@ -2,21 +2,24 @@
     padding:0.2rem;
     display:flex;
     flex-direction: column;
-    line-height: 1.3rem;
+    width:100%;
+    flex-shrink: 1;
 }
 input{
     font-size:1rem;
     padding:0.8rem 0.5rem;
     border:rgb(160, 160, 160) 0.0625rem solid;
     border-radius:0.2rem;
+    width:100%;
 }
 label{
     text-align:left;
+    width:fit-content;
 }
 .extraText{
+    line-height: 1rem;
     text-align:left;
     color:crimson;
-    visibility:hidden;
-    /* display:none; */
-    
+    visibility:hidden; 
+    display:none;
 }
