signup external signins

--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .main{
     min-height:  100vh;
     background-color:#f4f9ff;
-    padding:3rem 0;
+    /* padding:3rem 0; */
     display:flex;
     flex-direction:column;
 }
