--- a/client/src/components/RoundButton.module.css
+++ b/client/src/components/RoundButton.module.css
@@ -1,4 +1,4 @@
-button{
+.btn{
     border-radius:.4rem;
     border:none;
     font-weight:bold;
@@ -7,7 +7,7 @@ button{
     width:100%;
     cursor: pointer;
 }
-button:hover{
+.btn:hover{
     background-color:#396199 !important;
     color:white;
 }
