--- a/client/src/components/TypeInput.module.css
+++ b/client/src/components/TypeInput.module.css
@@ -5,16 +5,15 @@
     width:100%;
     flex-shrink: 1;
 }
-input{
+.textInput{
     font-size:1rem;
     padding:0.8rem 0.5rem;
     border:rgb(160, 160, 160) 0.0625rem solid;
     border-radius:0.2rem;
     width:100%;
 }
-label{
-    text-align:left;
-    width:fit-content;
+.labelText{
+    display:flex;
 }
 .extraText{
     line-height: 1rem;
