--- a/client/src/pages/Signup.module.css
+++ b/client/src/pages/Signup.module.css
@@ -1,4 +1,5 @@
 .signUpWrapper{
+    margin-top: 1.2rem;
     display:flex;
     flex-direction:column;
     align-self:center;
@@ -46,4 +47,19 @@ form{
 .policyText{
     width:80%;
     font-size: 0.85rem;
+}
+
+.externalSignin{
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    gap:0.7rem;
+    /* margin-bottom:1rem; */
+}
+
+.splitter{
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin: 0.5rem 0;
+    color:rgb(95, 95, 95);
 }
